Imported from https://jsrimr@github.com/jsrimr/stock_prediction.git

--- a/project.config
+++ b/project.config
@@ -1,2 +1,20 @@
 [access]
 	inheritFrom = All-Projects
+[access "refs/*"]
+	owner = group user/Jungsub Lim (jsrimr)
+[access "refs/for/refs/*"]
+	read = group user/Jungsub Lim (jsrimr)
+	push = group user/Jungsub Lim (jsrimr)
+	label-Code-Review = -2..+2 group user/Jungsub Lim (jsrimr)
+	label-Verified = -1..+1 group user/Jungsub Lim (jsrimr)
+	rebase = group user/Jungsub Lim (jsrimr)
+	removeReviewer = group user/Jungsub Lim (jsrimr)
+	submit = group user/Jungsub Lim (jsrimr)
+[access "refs/heads/*"]
+	read = group user/Jungsub Lim (jsrimr)
+	create = group user/Jungsub Lim (jsrimr)
+	push = +force group user/Jungsub Lim (jsrimr)
+	pushMerge = group user/Jungsub Lim (jsrimr)
+[access "refs/tags/*"]
+	push = group user/Jungsub Lim (jsrimr)
+	push = +force group user/Jungsub Lim (jsrimr)
